// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`star-rating-select renders basic fieldset 1`] = `
<DocumentFragment>
  <div
    class="star-rating"
    role="img"
  >
    <svg
      aria-hidden="true"
      class="star-rating__icon icon icon--star-dynamic"
      focusable="false"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="#icon-star-dynamic"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="star-rating__icon icon icon--star-dynamic"
      focusable="false"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="#icon-star-dynamic"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="star-rating__icon icon icon--star-dynamic"
      focusable="false"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="#icon-star-dynamic"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="star-rating__icon icon icon--star-dynamic"
      focusable="false"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="#icon-star-dynamic"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="star-rating__icon icon icon--star-dynamic"
      focusable="false"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="#icon-star-dynamic"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`star-rating-select renders defaults 1`] = `
<DocumentFragment>
  <div
    class="star-rating"
    data-stars="3-5"
    role="img"
  >
    <svg
      aria-hidden="true"
      class="star-rating__icon icon icon--star-dynamic"
      focusable="false"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="#icon-star-dynamic"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="star-rating__icon icon icon--star-dynamic"
      focusable="false"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="#icon-star-dynamic"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="star-rating__icon icon icon--star-dynamic"
      focusable="false"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="#icon-star-dynamic"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="star-rating__icon icon icon--star-dynamic"
      focusable="false"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="#icon-star-dynamic"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="star-rating__icon icon icon--star-dynamic"
      focusable="false"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="#icon-star-dynamic"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`star-rating-select renders with 0 selected 1`] = `
<DocumentFragment>
  <div
    aria-label="star rating"
    class="star-rating"
    data-stars="0"
    role="img"
  >
    <svg
      aria-hidden="true"
      class="star-rating__icon icon icon--star-dynamic"
      focusable="false"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="#icon-star-dynamic"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="star-rating__icon icon icon--star-dynamic"
      focusable="false"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="#icon-star-dynamic"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="star-rating__icon icon icon--star-dynamic"
      focusable="false"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="#icon-star-dynamic"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="star-rating__icon icon icon--star-dynamic"
      focusable="false"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="#icon-star-dynamic"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="star-rating__icon icon icon--star-dynamic"
      focusable="false"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="#icon-star-dynamic"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`star-rating-select renders with 2 selected 1`] = `
<DocumentFragment>
  <div
    aria-label="star rating"
    class="star-rating"
    data-stars="2"
    role="img"
  >
    <svg
      aria-hidden="true"
      class="star-rating__icon icon icon--star-dynamic"
      focusable="false"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="#icon-star-dynamic"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="star-rating__icon icon icon--star-dynamic"
      focusable="false"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="#icon-star-dynamic"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="star-rating__icon icon icon--star-dynamic"
      focusable="false"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="#icon-star-dynamic"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="star-rating__icon icon icon--star-dynamic"
      focusable="false"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="#icon-star-dynamic"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="star-rating__icon icon icon--star-dynamic"
      focusable="false"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="#icon-star-dynamic"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`star-rating-select renders with 5 selected 1`] = `
<DocumentFragment>
  <div
    class="star-rating"
    data-stars="5"
    role="img"
  >
    <svg
      aria-hidden="true"
      class="star-rating__icon icon icon--star-dynamic"
      focusable="false"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="#icon-star-dynamic"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="star-rating__icon icon icon--star-dynamic"
      focusable="false"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="#icon-star-dynamic"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="star-rating__icon icon icon--star-dynamic"
      focusable="false"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="#icon-star-dynamic"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="star-rating__icon icon icon--star-dynamic"
      focusable="false"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="#icon-star-dynamic"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="star-rating__icon icon icon--star-dynamic"
      focusable="false"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="#icon-star-dynamic"
      />
    </svg>
  </div>
</DocumentFragment>
`;
